--- a/app/src/main/res/layout/item_aluno.xml
+++ b/app/src/main/res/layout/item_aluno.xml
@@ -16,5 +16,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         tools:text="31 999525650"/>
 </LinearLayout>
